# LearnMetalAPI

./: .gitignore  CMakeLists.txt  README.md  run.sh
shader/: program.metal
src/: app_delegate.cpp  math.cpp  math.hpp  renderer.cpp  renderer.hpp  utility.cpp  utility.hpp
